QA-5896: Some modules should not appear in modules selection panel in site creation/edition

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
         <configuration>
           <instructions>
             <Jahia-Deploy-On-Site>all</Jahia-Deploy-On-Site>
+            <Jahia-Module-Type>system</Jahia-Module-Type>
           </instructions>
         </configuration>
       </plugin>
